[package]
name = "rye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
git2 = { version = "0.15.0", default-features = false }
lazy_static = "1.4.0"
rocket = { version = "0.4.11", features = ["tls"] }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
