[package]
name = "rye-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.6", features = ["cargo"] }
dirs = "4.0.0"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking", "gzip", "brotli", "async-compression"] }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
